Support GUI on localXvnc

--- a/consoles/icewm.cfg
+++ b/consoles/icewm.cfg
@@ -5,7 +5,7 @@ ShowTaskBar=0
 
 # Hide titlebar buttons and window menu
 TitleButtonsLeft=""
-TitleButtonsRight=""
+TitleButtonsRight="x"
 WinMenuItems=""
 
 # Disable most shortcuts
@@ -88,8 +88,8 @@ KeySysCollapseTaskBar=""
 # Disable root window menus
 # :r !grep -o '\<Desktop[^=]*Button=' /etc/icewm/preferences  | sed 's/$/0/'
 DesktopWinMenuButton=0
-DesktopWinListButton=0
-DesktopMenuButton=0
+DesktopWinListButton=1
+DesktopMenuButton=1
 
 # Disable maximize and rollup
 TitleBarMaximizeButton=0
